external/kyverno/policies/common/security/require-secret-for-sensitive-data-pod.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-secret-for-sensitive-data-pod
  annotations:
    policies.kyverno.io/title: Restrict Secrets by Name
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod/Secret
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/description: >-
      Environment variables provides several important resources to Containers:
        1. A filesystem, which is a combination of an image and one or more volumes.
        2. Information about the Container itself.
        3. Information about other objects in the cluster.
      For sensitive information, it is recommended to use Secrets which control the access of
      sensitive data carefully. This policy try to ensure that only container information can
      be consumed by Pods. If the user use some keywords in their envs, this policy will warn
      them and ask to use secrets inseatd.
spec:
  background: false
  validationFailureAction: Audit
  failurePolicy: Ignore
  rules:
  - name: secret-for-sensitive-data
    exclude:
      resources: {}
    generate:
      clone: {}
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: It is recommended to use secret for your sensitive data.
      pattern:
        spec:
          =(initContainers):
          - =(env):
            - name: "!*TOKEN* & !*Token* & !*token* & !*PASS* & !*Pass* & !*pass* & !*AUTH* & !*Auth* & !*auth* & !*KEY* & !*Key* & !*key* "
          containers:
          - =(env):
            - name: "!*TOKEN* & !*Token* & !*token* & !*PASS* & !*Pass* & !*pass* & !*AUTH* & !*Auth* & !*auth* & !*KEY* & !*Key* & !*key* "
